gen_src = files([
    'dep_src000.c',
    'dep_src001.c',
    'dep_src002.c',
    'dep_src003.c',
    'dep_src004.c',
    'dep_src005.c',
    'dep_src006.c',
    'dep_src007.c',
    'dep_src008.c',
    'dep_src009.c',
    'dep_src010.c',
    'dep_src011.c',
    'dep_src012.c',
    'dep_src013.c',
    'dep_src014.c',
    'dep_src015.c',
    'dep_src016.c',
    'dep_src017.c',
    'dep_src018.c',
    'dep_src019.c',
    'dep_src020.c',
    'dep_src021.c',
    'dep_src022.c',
    'dep_src023.c',
    'dep_src024.c',
    'dep_src025.c',
    'dep_src026.c',
    'dep_src027.c',
    'dep_src028.c',
    'dep_src029.c',
    'dep_src030.c',
    'dep_src031.c',
    'dep_src032.c',
    'dep_src033.c',
    'dep_src034.c',
    'dep_src035.c',
    'dep_src036.c',
    'dep_src037.c',
    'dep_src038.c',
    'dep_src039.c',
    'dep_src040.c',
    'dep_src041.c',
    'dep_src042.c',
    'dep_src043.c',
    'dep_src044.c',
    'dep_src045.c',
    'dep_src046.c',
    'dep_src047.c',
    'dep_src048.c',
    'dep_src049.c',
    'dep_src050.c',
    'dep_src051.c',
    'dep_src052.c',
    'dep_src053.c',
    'dep_src054.c',
    'dep_src055.c',
    'dep_src056.c',
    'dep_src057.c',
    'dep_src058.c',
    'dep_src059.c',
    'dep_src060.c',
    'dep_src061.c',
    'dep_src062.c',
    'dep_src063.c',
    'dep_src064.c',
    'dep_src065.c',
    'dep_src066.c',
    'dep_src067.c',
    'dep_src068.c',
    'dep_src069.c',
    'dep_src070.c',
    'dep_src071.c',
    'dep_src072.c',
    'dep_src073.c',
    'dep_src074.c',
    'dep_src075.c',
    'dep_src076.c',
    'dep_src077.c',
    'dep_src078.c',
    'dep_src079.c',
    'dep_src080.c',
    'dep_src081.c',
    'dep_src082.c',
    'dep_src083.c',
    'dep_src084.c',
    'dep_src085.c',
    'dep_src086.c',
    'dep_src087.c',
    'dep_src088.c',
    'dep_src089.c',
    'dep_src090.c',
    'dep_src091.c',
    'dep_src092.c',
    'dep_src093.c',
    'dep_src094.c',
    'dep_src095.c',
    'dep_src096.c',
    'dep_src097.c',
    'dep_src098.c',
    'dep_src099.c',
    'dep_src100.c'
  ])
src = files([
    'src000.c',
    'src001.c',
    'src002.c',
    'src003.c',
    'src004.c',
    'src005.c',
    'src006.c',
    'src007.c',
    'src008.c',
    'src009.c',
    'src010.c',
    'src011.c',
    'src012.c',
    'src013.c',
    'src014.c',
    'src015.c',
    'src016.c',
    'src017.c',
    'src018.c',
    'src019.c',
    'src020.c',
    'src021.c',
    'src022.c',
    'src023.c',
    'src024.c',
    'src025.c',
    'src026.c',
    'src027.c',
    'src028.c',
    'src029.c',
    'src030.c',
    'src031.c',
    'src032.c',
    'src033.c',
    'src034.c',
    'src035.c',
    'src036.c',
    'src037.c',
    'src038.c',
    'src039.c',
    'src040.c',
    'src041.c',
    'src042.c',
    'src043.c',
    'src044.c',
    'src045.c',
    'src046.c',
    'src047.c',
    'src048.c',
    'src049.c',
    'src050.c',
    'src051.c',
    'src052.c',
    'src053.c',
    'src054.c',
    'src055.c',
    'src056.c',
    'src057.c',
    'src058.c',
    'src059.c',
    'src060.c',
    'src061.c',
    'src062.c',
    'src063.c',
    'src064.c',
    'src065.c',
    'src066.c',
    'src067.c',
    'src068.c',
    'src069.c',
    'src070.c',
    'src071.c',
    'src072.c',
    'src073.c',
    'src074.c',
    'src075.c',
    'src076.c',
    'src077.c',
    'src078.c',
    'src079.c',
    'src080.c',
    'src081.c',
    'src082.c',
    'src083.c',
    'src084.c',
    'src085.c',
    'src086.c',
    'src087.c',
    'src088.c',
    'src089.c',
    'src090.c',
    'src091.c',
    'src092.c',
    'src093.c',
    'src094.c',
    'src095.c',
    'src096.c',
    'src097.c',
    'src098.c',
    'src099.c',
    'src100.c'
  ])

lib_lib = library('lib_'+directory,
            src,
            dependencies : dep_chain,
          )

lib = declare_dependency(
  sources: gen_src,
  link_with: lib_lib,
  dependencies : dep_chain,
)
